# EmailAutomation

./: README.md  metadata.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
src/my_python_package/: __init__.py  email_automation.py
tests/: test_module.py
